# pdflatte1

./: .replit  packages.txt  pyproject.toml  replit.nix  requirements.txt
.devcontainer/: devcontainer.json
pdflatte_project/Pdflatte/: .replit  main.py  pyproject.toml
pdflatte_project/Pdflatte/attached_assets/: Pasted-Explore-vision-capabilities-with-the-Gemini-API-Python-Node-js-Go-REST-Gemini-models-are-able--1740584944075.txt  Pasted-Gemini-models-are-able-to-process-images-and-videos-enabling-many-frontier-developer-use-cases-that-1740585511516.txt
