[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.4",
    "markdown>=3.7",
    "pdf2image>=1.17.0",
    "pdfkit>=1.0.0",
    "pillow>=11.1.0",
    "poppler-utils>=0.1.0",
    "streamlit>=1.42.2",
    "weasyprint>=64.1",
]
