
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-core>=2.24.1",
    "google-genai>=1.3.0",
    "google-generativeai>=0.8.4",
    "latex2mathml>=3.77.0",
    "markdown>=3.7",
    "openai>=1.64.0",
    "pdf2image>=1.17.0",
    "pdfkit>=1.0.0",
    "pillow>=11.1.0",
    "poppler-utils>=0.1.0",
    "streamlit>=1.42.2",
    "twilio>=9.4.6",
    "weasyprint>=64.1"
]
